# sardops

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-assets.md  LICENSE.md  Makefile  README.md  codebook.toml  rust-toolchain.toml  sdop-sav.ron
.github/workflows/: ci.yml  docker_build.yml  release.yaml
.zed/: debug.json
assets/: foods.ron  items.ron  locations.ron  pets.ron
assets/images/foods/: biscuit.aseprite  bubble_tea.aseprite  burger.aseprite  chips.aseprite  coffee.aseprite  egg.aseprite  fried_chicken.aseprite  gopchang.aseprite  jokbal.aseprite  kebab.aseprite  kimbap.aseprite  office_slop.aseprite  pizza.aseprite  roti_canai.aseprite  sandwich.aseprite  soup.aseprite  spinach_risotto.aseprite  swedish_meatballs.aseprite  watermelon.aseprite
assets/images/mask/: stomach_mask.ase
assets/images/misc/: age_symbol.ase  air_conditioner.ase  alarm.ase  alpha_fullstop.ase  alpha_small_0.ase  alpha_small_1.ase  alpha_small_2.ase  alpha_small_3.ase  alpha_small_4.ase  alpha_small_5.ase  alpha_small_6.ase  alpha_small_7.ase  alpha_small_8.ase  alpha_small_9.ase  alpha_small_A.ase  alpha_small_B.ase  alpha_small_C.ase  alpha_small_D.ase  alpha_small_DOLLARSIGN.ase  alpha_small_E.ase  alpha_small_F.ase  alpha_small_G.ase  alpha_small_H.ase  alpha_small_HASHTAG.ase  alpha_small_I.ase  alpha_small_J.ase  alpha_small_K.ase  alpha_small_L.ase  alpha_small_M.ase  alpha_small_N.ase  alpha_small_O.ase  alpha_small_P.ase  alpha_small_Q.ase  alpha_small_R.ase  alpha_small_S.ase  alpha_small_T.ase  alpha_small_U.ase  alpha_small_V.ase  alpha_small_W.ase  alpha_small_X.ase  (+243 more)
assets/images/misc/tilesets/: alphabet.ase  alphabet.ron
assets/images/pets/: ballotee_eat.ase  ballotee_happy.ase  ballotee_normal.ase  ballotee_sad.ase  ballotee_sleeping.ase  beach_umbrella_eat.ase  beach_umbrella_happy.ase  beach_umbrella_normal.ase  beach_umbrella_sad.ase  beach_umbrella_sleep.ase  beerie_eat.ase  beerie_happy.ase  beerie_normal.ase  beerie_sad.ase  beerie_sleeping.ase  big_brain_eat.ase  big_brain_happy.ase  big_brain_normal.ase  big_brain_sad.ase  big_brain_sleep.ase  blob_eat.ase  blob_happy.ase  blob_normal.ase  blob_sad.ase  blob_sleeping.ase  ckcs_eat.ase  ckcs_happy.ase  ckcs_normal.ase  ckcs_sad.ase  ckcs_sleeping.ase  computie_eat.ase  computie_happy.ase  computie_normal.ase  computie_sad.ase  computie_sleeping.ase  devil_eat.ase  devil_happy.ase  devil_normal.ase  devil_sad.ase  devil_sleep.ase  (+35 more)
assets/sounds/: alarm.ron  breeding.ron  buy_chime.ron  death.ron  eating.ron  egg_hatch.ron  error.ron  evolve.ron  fanfare.ron  fanfare_long.ron  fishing_idle.ron  fishing_pulling.ron  greensleeves.ron  heal.ron  hungry.ron  lost.ron  new_pet.ron  pooped.ron  shop.ron  shop_closed.ron  sick.ron  star_gazing.ron  twinkle_twinkle_little_star.ron
misc/: sdop.sav
misc/gen_night_sky/: Cargo.toml
misc/gen_night_sky/src/: main.rs
misc/gen_night_sky/stars/: star_large.aseprite  star_med.aseprite  star_small.aseprite
misc/noise-gen/: Cargo.toml
misc/noise-gen/src/: main.rs
playtest_notes/playtest_1/: paul.md
playtest_notes/playtest_2/: paul.md
playtest_notes/playtest_3/: paul.md
playtest_notes/playtest_4/: paul.md
sdop-3ds/: Cargo.toml  README.md  sdop-3ds.3dsx
sdop-3ds/src/: main.rs
sdop-build-common/: Cargo.toml
sdop-build-common/src/: lib.rs
sdop-c/: Cargo.toml  build.rs
sdop-c-test/: main.c
sdop-c/src/: lib.rs
sdop-cli/: Cargo.toml  LICENSE  README.md
sdop-cli/src/: main.rs
sdop-common/: Cargo.toml
sdop-common/src/: lib.rs
sdop-game/: Cargo.toml  build.rs
sdop-game/src/: alarm.rs  anime.rs  assets.rs  bit_array.rs  book.rs  calendar.rs  clock.rs  date_utils.rs  death.rs  display.rs  dream_bubble.rs  egg.rs  explore.rs  firework.rs  fish_tank.rs  fonts.rs  food.rs  fps.rs  furniture.rs  game_consts.rs  game_context.rs  geo.rs  input.rs  invetro_light.rs  items.rs  items_use.rs  lib.rs  link_four.rs  math.rs  money.rs  night_sky.rs  notes.rs  particle_system.rs  pc.rs  poop.rs  save.rs  shop.rs  sim.rs  sounds.rs  sprite.rs  (+6 more)
sdop-game/src/pet/: definition.rs  mod.rs  record.rs  render.rs
sdop-game/src/scene/: alarm_set_scene.rs  breed_scene.rs  credits_scene.rs  death_scene.rs  eat_scene.rs  egg_hatch.rs  egg_hatch_scene.rs  enter_date_scene.rs  enter_text_scene.rs  evolve_scene.rs  explore_select_scene.rs  exploring_post_scene.rs  fishing_scene.rs  food_select.rs  game_select.rs  heal_scene.rs  home_scene.rs  inventory_scene.rs  mg_doge_em.rs  mg_fanfare.rs  mg_link_four.rs  mg_tic_tac_toe.rs  mg_weight_lift.rs  mod.rs  new_pet_scene.rs  nye_scene.rs  pet_info.rs  pet_info_scene.rs  pet_records_scene.rs  place_furniture_scene.rs  poop_clear_scene.rs  settings_scene.rs  shop_scene.rs  star_gazing_scene.rs  suiters_scene.rs  template_scene.rs  weekday_select_scene.rs
sdop-game/src/scene/home_scene/: activity.rs  menu_options.rs  mod.rs  weather.rs
sdop-gba/: .gitignore  Cargo.toml  rust-toolchain.toml
sdop-gba/src/: main.rs
sdop-pc/: Cargo.toml
sdop-pc/src/: main.rs
sdop-pico/: Cargo.toml  README.md  sdop.sav
sdop-pico/.cargo/: config.toml
sdop-pico/src/: fram.rs  main.rs  notes.rs
sdop-psp/: Cargo.toml  Psp.toml  rust-toolchain.toml
sdop-psp/src/: main.rs
sdop-psvita/: Cargo.toml  rust-toolchain.toml  sdop.sav
sdop-psvita/src/: main.rs
sdop-psx/: Cargo.toml  rust-toolchain.toml
sdop-psx/src/: main.rs
sdop-py/: Cargo.toml  pyproject.toml
sdop-py/src/: lib.rs
sdop-python-run/: .gitignore  main.py  pyproject.toml  sdop.sav
sdop-save-edit/: .gitignore  Cargo.toml
sdop-save-edit/src/: main.rs
sdop-web/: Cargo.toml  index.html
sdop-web/src/: main.rs
spreadsheet-gen/: Cargo.toml
spreadsheet-gen/src/: main.rs
