[package]
name = "sdop-cli"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["sardap <paul@sarda.dev>"]
license = "MIT"
edition = "2021"

[dependencies]
sdop-game = { path = "../sdop-game" }
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
chrono = { git = "https://github.com/sardap/chrono" }
