[package]
name = "sdop-common"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde"]


[dependencies]
serde = { workspace = true, optional = true }
strum = { workspace = true, default-features = false }
strum_macros = { workspace = true, default-features = false }
const_for = { workspace = true }
