[package]
name = "sdop-game"
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand = { version = "2.3.0", default-features = false }
glam = { version = "0.30.4", default-features = false, features = ["libm"] }
fixedstr = { version = "0.5.9", default-features = false, features = [
    "no-alloc",
] }
log = { version = "0.4.27", default-features = false }
bincode = { version = "2.0.1", default-features = false, features = ["derive"] }
strum = { version = "0.27", default-features = false }
strum_macros = { version = "0.27", default-features = false }
libm = { version = "0.2", default-features = false }
embedded-graphics = { version = "0.8.1", default-features = false }
tinybmp = "0.6.0"
chrono = { git = "https://github.com/sardap/chrono", default-features = false }
const_for = "0.1.5"
casey = "0.4.2"
paste = "1.0.15"

[build-dependencies]
asefile = "0.3.8"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
image = "0.24.9"
convert_case = "0.8.0"
strum = { version = "0.27" }
strum_macros = { version = "0.27" }
computus = { version = "1.1.0", features = ["chrono"] }
chrono = { git = "https://github.com/sardap/chrono" }
solar-calendar-events = { git = "https://github.com/sardap/solar-calendar-events" }
