[package]
name = "sdop-game"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde", "fixedstr/serde", "chrono/serde", "sdop-common/serde", "dep:serde-big-array"]
notes = []
2025 = []

[dependencies]
sdop-common = { path= "../sdop-common" }
fastrand = { version = "2.3.0", default-features = false }
glam = { version = "0.30.4", default-features = false, features = ["libm"] }
fixedstr = { git = "https://github.com/sardap/fixedstr", default-features = false, features = [
    "no-alloc",
    "bincode",
] }
log = { version = "0.4.27", default-features = false }
bincode = { workspace = true }
strum = { version = "0.27", default-features = false }
strum_macros = { version = "0.27", default-features = false }
libm = { version = "0.2", default-features = false }
embedded-graphics = { version = "0.8.1", default-features = false }
tinybmp = "0.6.0"
chrono = { workspace = true }
const_for = "0.1.5"
casey = "0.4.2"
paste = "1.0.15"
serde = { workspace = true, optional = true }
serde-big-array = { version = "0.5", optional = true }
heapless = "0.8.0"

[build-dependencies]
sdop-common = { path = "../sdop-common", features = ["serde"] }
asefile = "0.3.8"
ron = "0.10.1"
serde = { workspace = true }
image = "0.24.9"
convert_case = "0.8.0"
strum = { version = "0.27" }
strum_macros = { version = "0.27" }
computus = { version = "1.1.0", features = ["chrono"] }
chrono = { git = "https://github.com/sardap/chrono" }
solar-calendar-events = { git = "https://github.com/sardap/solar-calendar-events" }
walkdir = "2"
