[package]
name = "sdop-gba"
version = "0.1.0"
authors = [""]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = { git = "https://github.com/sardap/agb" }
sdop-game = { path = "../sdop-game" }
time = { version = "0.3.41", default-features = false }

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
