[package]
name = "sdop-pico"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"

embedded-hal = "1.0.0"
rp235x-hal = { git = "https://github.com/rp-rs/rp-hal", version = "0.2.0", features = [
  "binary-info",
  "critical-section-impl",
  "rt",
  "defmt",
] }
panic-halt = "0.2.0"
rp-binary-info = "0.1.0"
ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"
sdop-game = { path = "../sdop-game" }
