[package]
name = "sdop-pico"
version = "0.1.0"
edition = "2021"

[dependencies]
sdop-game = { path = "../sdop-game" }

cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"


embedded-hal = "1.0.0"
panic-halt = "0.2.0"
rp-binary-info = "0.1.0"
ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.2.0"
embedded-sdmmc = "0.8.1"
fixedstr = { git = "https://github.com/sardap/fixedstr", default-features = false, features = [
    "no-alloc",
    "bincode",
] }
embedded-text = "0.7.2"
libm = "0.2.15"
defmt-rtt = "0.4"
panic-probe = { version = "0.3" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "c6371d7", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "c6371d7", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "c6371d7" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "c6371d7" }
