[package]
name = "sdop_py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sdop_py"
crate-type = ["cdylib"]

[dependencies]
chrono = {workspace = true}
pyo3 = { version = "0.27.0", features = ["extension-module", "chrono"] }
sdop-game = { path = "../sdop-game" }
