[package]
name = "spreadsheet-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
sdop-build-common = { path = "../sdop-build-common" }
sdop-common = { path = "../sdop-common" }
sdop-game = { path = "../sdop-game", features = ["serde"] }
csv = "1.4.0"
serde = { workspace = true }
ron = { workspace = true }
